# hobbycode

./: ProjectHome.md
8051_ISP/: Makefile  isp.c  lpt.h  main.c  udelay.h
IsingBilayer/: ComputeR.m  IsingBilayer.c  IsingBilayerCOP.c  IsingBilayerNCO.c  IsingMembrane.c  Makefile
IsingBilayer/test/: mono2-noX.c
LBKernel/: Makefile  README  data_phi.txt  data_rho.txt  lb2dmix.cpp  lb_d1q3.h  lb_d2q9.cpp  lb_d2q9.h  lb_d2q9_mix.cpp  lb_d2q9_mix.h  lb_kernel.cpp  lb_kernel.h  lb_viewer.cpp  lbcolormap.cpp  lbcolormap.h  lbd2q9.cpp  lbd2q9.h  lbviewer.cpp  lbviewer.h  main.cpp  mgl_fltk.cpp  tiny_lb.h
LBKernel/apps/: Makefile  lb_d2q9_mix_main.cpp
LBKernel/mgl/: mgl_fltk.h
LBKernel/test/: Makefile  Mat.m  build_mgl.sh  prog2.cpp
LBMs/sws_example/: Makefile
MinGL/: .cdtbuild  .project
MinGL/demo/: demo_main.h
MinGL/src/: Camera.cpp  Camera.h  SDLViewer.cpp
ScriptEngine/: LuaScriptEditor.cpp  LuaScriptEditor.h  LuaScriptEngine.cpp  LuaScriptEngine.h  LuaScriptEngine_wrap.cxx  Makefile
alicerpc/: alicemain.py  alicerpc.py  app.yaml  index.html
binarymix/: INSTALL  Makefile.am  configure.ac
binarymix/autom4te.cache/: traces.0  traces.1
binarymix/src/binarymix/: Makefile.am  README  lb-Landau.c  lb-Landau.h  lb-d2q9-Landau.c  lb-d3q19-Landau.c  lb-d3q19-Landau.h
binarymix/src/core/: Makefile.am  Makefile.in  README  lb-cart-partition.c  lb-cart-partition.h  lb-d2q9.c  lb-d2q9.h  lb-d3q19-utils.c  lb-d3q19.c  lb-macros.h  lb-memory.h  lb-messages.h  lb-mpi-utils.c  lb-partition-info.h  lb-wtime.c
binarymix/src/graphics/: Makefile.in  lb-colormap.c  lb-colormap.h  lb-rgb.c  lb-rgb.h
binarymix/src/lua/: Makefile.am  Makefile.in  README  lb-lua.i  lb-lua_wrap-mpi.c  lb-lua_wrap.c
binarymix/test/: Makefile.in  README  binaryfluid2d.lua  binaryfluid3d.lua  color.lua
duckybot/: .project
duckybot/include/: mymaindialog.h  tts.h
duckybot/src/: mymaindialog.cpp  tts.cpp
duckybot/ui/: aimlsetdialog.ui
gnu-arm-installer/: ReadMe.txt
howie-src-0.6.0/: howie.ini.default  howie.ini.original  std-startup.xml
ichatbot/: chatbot.ini.bak  chatbot.py  startup.xml
ichatbot/knowledgebase/: per-drWallace.aiml  std-atomic.aiml  std-personality.aiml  std-religion.aiml  std-robot.aiml  std-that.aiml
lamaprog-1.0.0/: CHANGELOG  README
lamaprog-1.0.0/doc/: communication.txt  hardware.txt  lamaprog020.dsn  spported_devices  usage.txt
lamaprog-1.0.0/linux_sw/: com.c  hexfile.c  prog.c  prog.po
lamaprog-1.0.0/prog_hw/: i2c.a51  prog.a51  prog.hex
lamaprog-1.0.0/windows_sw/: hexfile.c  hexfile.h  prog.c
lbm-sdl/: Makefile  lb2d.h  lbgk2d.cpp  lbgk2d.h  main.cpp
librs232/src/: Makefile  librs232.c  librs232.h
librs232/testread/: Makefile  testread.c
librs232/testsend/: testsend  testsend.c
nxt/: tribot.nxc
osgSDLviewer/: .cdtbuild
osgSDLviewer/src/: Makefile  OSGSDLViewer.cpp  OSGSDLViewer.h  PhysicalEntity.cpp  PhysicalEntity.h  SDLEvents.h  SDLViewer.cpp  SDLViewer.h  SDLviewer.cpp  SDLviewer.h  SimulationEngine.cpp  SimulationEngine.h  Singleton.h  main.cpp  osgSDLViewer.cpp  osgSDLViewer.h  test.cpp
realAlifeEngine/: README.txt
realAlifeEngine/contribs/opal/src/: BlueprintManager.cpp  BlueprintManager.h  GearedMotor.cpp  JointData.h  Logger.cpp  Makefile.am  Makefile.in  Mass.h  ODEJoint.h  ODESolid.cpp  ODESpace.cpp  Portability.h  Rayr.h  ServoMotorData.h  Simulator.cpp  Solid.cpp  Solid.h  VelocityMotor.cpp
realAlifeEngine/contribs/opal/src/unit-tests/: testFixedJoint.cpp  testPoint3r.cpp  testQuaternion.cpp  testServoMotor.cpp  testVec3r.cpp  testVolumeSensor.cpp
realAlifeEngine/src/: .cdtbuild
serial-io/: DeviceDialog.cpp  Dialog.cpp  Dialog.h  Doxyfile  EditBufferDialog.cpp  EditBufferDialog.h  EditDialogDialog.h  EditEventDialog.h  Event.cpp  InitialValueDialog.h  LongLongIntValidator.cpp  Makefile  Representation.cpp  Representation.h  RxTxValue.cpp  RxTxValue.h  SaveBufferDlg.h  SerialReceiveThread.cpp  TODO  ValueBuffer.cpp  ValueBuffer.h  Variable.h  VariableDialog.h  mainwindow.cpp  siom_ger.ts
simpleLuaEngine/: .cdtbuild  .cdtproject  .project  LuaScriptEngine.h
ternary_lipidbilayer/: dppc_chol.gro  dppc_chol.mdp  dppc_chol.top  dppc_chol_400K.mdp  dppc_chol_minimize.mdp
ternary_lipidbilayer/include/: diC18-2_PC.itp  martini_v2.0_cholesterol.itp
ternary_lipidbilayer/test/: dppc_chol-afterheat-100ns.gro
ternary_lipidbilayer/utils/: transform  transform.c
textgen/: drseuss.txt
trunk/8051_ISP/: Makefile  README  hexfiles.c  hexfiles.h  isp.h  lpt.c  programmer.c  programmer.h  udelay.c
trunk/IsingBilayer/: DiffusionCH.c  IsingBilayer.c  IsingBilayerCOP.c  IsingMonolayer.c
trunk/LBKernel/: Makefile  lb2dmix.cpp  lb2dmix.h  lb_d1q3.cpp  lb_d2q9.cpp  lb_d2q9.h  lb_d2q9_mix.cpp  lb_d2q9_mix.h  lb_kernel.cpp  lb_kernel.h  lb_main.cpp  lb_viewer.cpp  lb_viewer.h  lbd2q9.cpp  lbd2q9.h  lbkernel.cpp  lbkernel.h  lbrgb.cpp  lbrgb.h  lbviewer.cpp  lbviewer.h  main.cpp  mgl_fltk.cpp
trunk/MinGL/: .cdtbuild
trunk/ScriptEngine/: CSayCheese.h  LuaScriptEngine.i  main.cpp
trunk/alicerpc/: alicemain.py  alicerpc.py  app.yaml  create_brain.py  index.html  test_aiml.py  test_alicerpc.py  test_rpc.py
trunk/archive/: ProgramQv1_1.tar.bz2
trunk/binarymix/: AUTHORS  ChangeLog  Makefile.in  README  config.h.in  configure
trunk/binarymix/src/graphics/: Makefile.am
trunk/duckybot/: duckybot.pro
trunk/howie-src-0.6.0/: howie.ini  my-howie.aiml  std-startup.xml
trunk/lamaprog-1.0.0/: INSTALL
trunk/lbm-sdl/: lb2d.h  lbgk2d.cpp  lbgk2d.h  main.cpp
trunk/librs232/: Readme.txt
trunk/nxt/: spike-00.nxc
trunk/osgSDLviewer/: .cdtbuild  .project
trunk/serial-io/: DeviceDialog.h  EditDialogDialog.cpp  (+15 more)
twitter_bot/: twitterbot.py
waipot-ProgramQ/: .cdtproject
wxAvimator/: Animation.cpp  Animation.h  AnimationView.cpp  AnimationView.h  Avimator.nsi  Camera.cpp  Figure.h  IKTree.h  LuaScriptEditor.cpp  LuaScriptEditor.h  LuaScriptEngine.cpp  LuaScriptEngine.i  LuaScriptEngine_wrap.cxx  MainApplication.cpp  Math3D.h  README  SLParts.h  glm.cpp  glm.h  lua.Makefile
wxNXTflash/: MainFrame.cpp  MainFrame.h  Makefile
(+879 files in other folders)
